--- a/src/app/queue.module.css
+++ b/src/app/queue.module.css
@@ -26,6 +26,7 @@
     display: flex;
     width: 100%;
     flex-direction: column;    
+    justify-content: end;
     margin-top: 20px;
     height: 420px;
     overflow-y: auto;
